@@ -54,9 +54,10 @@ public class FlakAutocannonProjectile extends AbstractAutocannonProjectile<FlakA
 
 	protected void detonate() {
 		Vec3 oldDelta = this.getDeltaMovement();
-		this.level.explode(null, this.getX(), this.getY(), this.getZ(), 2.0f, CBCConfigs.SERVER.munitions.damageRestriction.get().explosiveInteraction());
-		this.setDeltaMovement(oldDelta);
 		FlakAutocannonProjectileProperties properties = this.getProperties();
+		this.level.explode(null, this.getX(), this.getY(), this.getZ(), properties == null ? 2 : properties.explosionPower(),
+			CBCConfigs.SERVER.munitions.damageRestriction.get().explosiveInteraction());
+		this.setDeltaMovement(oldDelta);
 		if (properties != null) {
 			Shrapnel.spawnShrapnelBurst(this.level, CBCEntityTypes.SHRAPNEL.get(), this.position(), this.getDeltaMovement(),
 				properties.shrapnelCount(), properties.shrapnelSpread(), properties.shrapnelDamage());
